--- a/tts-ws/.gitignore
+++ b/tts-ws/.gitignore
@@ -52,9 +52,10 @@ build/Release
 
 node_modules/
 jspm_packages/
-
-# Snowpack dependency directory (https://snowpack.dev/)
-
+.wrangler/
+dist/
+.DS_Store
+public/assets/
 web_modules/
 
 # TypeScript cache
@@ -165,3 +166,6 @@ dist
 .env*
 !.env.example
 .wrangler/
+
+# Local tooling (emsdk) installed by scripts/bootstrap.sh
+.tooling/
